--- a/style.css
+++ b/style.css
@@ -1,27 +1,112 @@
+        body {
+            font-family: 'Andika New Basic', sans-serif;
+        }
         fresh th {
-            text-align: left;
+            text-align: center;
             border: 1px solid black;
             height: 400 px;
         }
         fresh td {
             border: 1px solid black;
-            border-bottom: 0;
+            /*border-bottom: 0;*/
             /*border-right: 0;*/
             height: 20px;
-            text-align: left;
+            text-align: center;
         }
 
-        div th, div td {
+        /* div th, div td {
             border: 1px solid black;
             text-align: center;
         }
         table {
             display: inline;
             border-collapse: collapse;
-        }
+        } */
         input {
             text-align: center;
         }
         #curtain {
           background-color: white;
+        }
+
+        .container-div{
+            width: 100%; 
+            height: 100%; 
+            margin: 0px; 
+            padding: 0px
+        }
+
+        .algorithm-div{
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .styled-table {
+            border-collapse: collapse; */
+            margin: 25px 0;
+            font-size: 0.9em;
+            /* font-family: sans-serif; */
+            /* min-width: 400px; */
+            /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
+            width: 100%;
+        }
+
+        .styled-table thead tr {
+            background-color: #009879;
+            color: #ffffff;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .styled-table th,
+        .styled-table td {
+            padding: 12px 15px;
+        }
+
+        .styled-table tbody tr {
+            border-bottom: 1px solid #dddddd;
+            text-align: center;
+            vertical-align: middle;
+        }
+        
+        .styled-table tbody tr:nth-of-type(even) {
+            background-color: #f3f3f3;
+        }
+        
+        .styled-table tbody tr:last-of-type {
+            /*border-bottom: 2px solid #009879;*/
+        }
+
+        .styled-table tbody tr.active-row {
+            font-weight: bold;
+            color: #009879;
+        }
+
+        #algorithm {
+            border-radius: 10px;
+            padding: 8px;
+        }
+        /*.exectime {
+            width: 50%;
+            border-radius: 5px;
+            border: 1px solid cadetblue;
+        }*/
+        input[type=text] {
+            width: 18%;
+            border-radius: 5px;
+            border: 1px solid cadetblue;
+            padding: 5px;
+        }
+        input[type=button] {
+            color: #fff;
+            background-color: #5bc0de;
+            padding: 8px;
+            border-radius: 8px;
+            border: 1px solid #46b8da;
+            margin: 5px;
+        }
+        .list {
+            display: block;
+            width: 23%;
+            margin: 0 auto;
         }
